tests/fixtures/valid/tuple/tuple_len.py
# Tuple length
t: tuple[int, int, int] = (1, 2, 3)
print(len(t))
# Expected output: 3
