tests/fixtures/invalid/set_le_none.py
# Cannot compare with <= Set[int] and None
x: bool = {1, 2, 3} <= None
